<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="mealplan">Meal Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="addtofav">Add To Fav</string>
    <string name="remove">Remove</string>
    <string name="favouritemeals">My Favourite Meals</string>
    <string name="addtoplan">Add To Plan</string>
    <string name="dot" />
    <string name="ing">  Ingredients</string>
    <string name="instructions">  Instructions</string>
    <string name="search">Search</string>
    <string name="Category">Category</string>
    <string name="region">Regions</string>
    <string name="noresult">"Sorry No Result Found "</string>
    <string name="whatday">"What day should we add this meal to ?"</string>
    <string name="add">Add</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday\n</string>
    <string name="tryagain">Try again</string>
    <string name="name">Name</string>
    <string name="foodplanner">Food Planner\n</string>
</resources>