<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_calender"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/mealplan" />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_fav_name"
        android:title="@string/favourite" />

</menu>