<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFEE7"
    android:foregroundTint="@color/white"
    tools:context=".ui.calendar.view.CalendarFragment">

    <TextView
        android:id="@+id/calenderFragTxtView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#FB8C00"
        android:backgroundTintMode="screen"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calenderFragBackImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/item_background_color"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calenderFragForwrdImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/item_background_color"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="85dp"
        android:background="#FFFEE7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calenderFragTxtView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/calenderFragSundayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sunday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragSundayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragSundayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/calenderFragMondayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/monday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragSundayRecyclervVew" />

            <TextView
                android:id="@+id/mondaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragMondayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragMondayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mondaySeparator" />

            <TextView
                android:id="@+id/calenderFragTuesdayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tuesday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragMondayRecyclervVew" />

            <TextView
                android:id="@+id/tuesdaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragTuesdayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragTuesdayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tuesdaySeparator" />

            <TextView
                android:id="@+id/calenderFragWednesdayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/wednesday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragTuesdayRecyclervVew" />

            <TextView
                android:id="@+id/wednesdaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragWednesdayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragWednesdayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wednesdaySeparator" />

            <TextView
                android:id="@+id/calenderFragThursdayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/thursday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragWednesdayRecyclervVew" />

            <TextView
                android:id="@+id/thursdaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragThursdayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragThursdayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thursdaySeparator" />

            <TextView
                android:id="@+id/calenderFragFridayTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/friday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragThursdayRecyclervVew" />

            <TextView
                android:id="@+id/fridaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragFridayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragFridayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridaySeparator" />

            <TextView
                android:id="@+id/calenderFragSaturdayTxtView"
                android:layout_width="90dp"
                android:layout_height="31dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/saturday"
                android:textColor="@color/item_background_color"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragFridayRecyclervVew" />

            <TextView
                android:id="@+id/saturdaySeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calenderFragSaturdayTxtView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderFragSaturdayRecyclervVew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturdaySeparator" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>