<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.FoodPlanner"
    android:background="#FFFEE7"
    tools:context=".ui.Meal.view.MealActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFEE7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFEE7">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:background="#FFFEE7"
                app:cardBackgroundColor="#FFFEE7"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#FFFEE7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mealActImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFEE7"
                        tools:srcCompat="@tools:sample/avatars" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:id="@+id/mealActMealTxtView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="34sp"
                        android:textStyle="bold|italic" />
                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/mealActAddToFavBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/item_background_color"
                android:text="@string/addtofav"
                android:textColor="#FFFEE7"
                android:textColorLink="@color/white"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <Button
                android:id="@+id/mealActAddToPlanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/item_background_color"
                android:text="@string/addtoplan"
                android:textColor="#FFFEE7"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/mealActMealAreaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="TextView"
                android:textColor="@color/item_background_color"
                android:textColorLink="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/mealActMealCategoryTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="TextView"
                android:textColor="@color/item_background_color"
                android:textColorLink="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/mealActMealAreaTextView"
                app:layout_constraintTop_toTopOf="@+id/mealActMealAreaTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mealActRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="15dp"
                android:background="#FFFEE7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/mealActFixedtxtView">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/mealActFixedtxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/item_background_color"
                android:text="@string/ing"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealActAddToPlanBtn" />

            <TextView
                android:id="@+id/mealActFixedtxtView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/item_background_color"
                android:text="@string/instructions"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/mealActFixedtxtView"
                app:layout_constraintTop_toBottomOf="@+id/mealActWeb" />

            <TextView
                android:id="@+id/mealActMealInstructionsTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:text="TextView"
                android:textColor="@color/item_background_color"
                android:textColorLink="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/mealActMealAreaTextView"
                app:layout_constraintTop_toBottomOf="@+id/mealActFixedtxtView1" />

            <WebView
                android:id="@+id/mealActWeb"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#FFFEE7"
                app:layout_constraintStart_toStartOf="@+id/mealActMealAreaTextView"
                app:layout_constraintTop_toBottomOf="@+id/mealActRecycler">

            </WebView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>